login realizado full responsive, faltan efectos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <ul class="container_login">
             <li><a href="">Registrate!</a></li>
-            <li><a href="">Ingresa</a></li>
+            <li><a href="./login.html">Ingresa</a></li>
         </ul>
         <nav>
             <div class="container_logo">
