--- a/login.html
+++ b/login.html
@@ -14,15 +14,15 @@
             <h1>Iniciar Sesion</h1>
         </div>
         <ul class="container_datos">
-            <li><input type="email" placeholder="Email"></li>
-            <li><input type="password" placeholder="Contraseña"></li>
+            <li><input type="email" class="email" placeholder="Email"></li>
+            <li><input type="password" class="password" placeholder="Contraseña"></li>
         </ul>
         <div class="container_botones">
-            <input type="checkbox">Recordarme
+            <input type="checkbox" class="recordarme">Recordarme
             <a href="">¿Ya estas registrado?</a>
         </div>
         <div class="container_boton_iniciarsesion">
-            <a href="">INICIAR SESION</a>
+            <a href="./index.html">INICIAR SESION</a>
         </div>
     </div>
 </body>
