conexiones de botones a register

--- a/register.html
+++ b/register.html
@@ -50,11 +50,11 @@
         <p>Cuando te registras en nuestra pagina, automaticamente estas aceptando nuestras <b>Politicas de Privacidad</b> y los <b>Terminos y condiciones de uso</b> de Tillas.</p>
     </div>
     <div class="container_boton">
-        <a href="">REGISTRAR</a>
+        <a href="./index.html">REGISTRAR</a>
     </div>
     <div class="containter_yasosmiembro">
         <p>¿Ya sos miembro?</p>
-        <a href="">Inciar sesion</a>
+        <a href="./index.html">Inciar sesion</a>
     </div>
 
     </div>
