--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <ul class="container_login">
-            <li><a href="">Registrate!</a></li>
+            <li><a href="./register.html">Registrate!</a></li>
             <li><a href="./login.html">Ingresa</a></li>
         </ul>
         <nav>
