hero para movible, falta otros

--- a/index.html
+++ b/index.html
@@ -31,8 +31,32 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </label>
-
         </nav>
     </header>
+
+    <main>
+
+        <section class="container_hero" id="INICIO">
+
+            <div class="slider">
+                <ul>
+                    <li><img src="zapas1.jpg" alt=""></li>
+                    <li><img src="zapas2.jpg" alt=""></li>
+                    <li><img src="zapas4.webp" alt=""></li>
+                    <li><img src="zapas3.jpeg" alt=""></li>
+                </ul>
+            </div>
+
+            <div class="container_titulo">
+                <h1>
+                    TILLAS
+                </h1>
+                
+            </div>
+
+        </section>
+    </main>
+
+
 </body>
 </html>
