hero para tablet, falta screen

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <h1>
                     TILLAS
                 </h1>
-                
+                <p>
+                    Tu velocidad en estado puro
+                </p>
             </div>
 
         </section>
