mas info section, falta tablet y screen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <ul class="container_login">
-            <li><a href="./register.html">Registrate!</a></li>
-            <li><a href="./login.html">Ingresa</a></li>
+            <li><a href="./register.html" class="register">Registrate!</a></li>
+            <li><a href="./login.html" class="signin">Ingresa</a></li>
         </ul>
         <nav>
             <div class="container_logo">
@@ -20,11 +20,11 @@
             </div>
 
             <input type="checkbox" id="options-button" class="menu-toggle">
-            <ul class="container_options">
-                <li><a href="#INICIO" class="options"> Inicio</a></li>
-                <li><a href="#VELOCIDAD" class="options">Sobre Nosotros</a> </li>
-                <li><a href="#COLECCIONES" class="options"> Colecciones</a></li>
-                <li><a href="#CONTACTANOS" class="options">Contactanos</a></li>
+            <ul class="container_options ">
+                <li><a href="#INICIO" class="options hover-underline-animation"> Inicio</a></li>
+                <li><a href="#VELOCIDAD" class="options hover-underline-animation">Sobre Nosotros</a> </li>
+                <li><a href="#COLECCIONES" class="options hover-underline-animation"> Colecciones</a></li>
+                <li><a href="#CONTACTANOS" class="options hover-underline-animation">Contactanos</a></li>
             </ul>
             <label for="options-button">
                 <div class="container_options_button">
@@ -57,6 +57,23 @@
             </div>
 
         </section>
+
+        <section class="container_introduccion">
+            <div class="introduccion">
+                <h2>Somos lo que estabas buscando.</h2>
+                <p>Un grupo de gente que busca el calzado perfecto, que se adapta a nuestras necesidades. Tenemos variedades únicas, una combinación de colores sin igual. Súmate a el movimiento, tu movimiento, <span>TILLAS</span>  tu velocidad en estado puro.</p>
+                <p>Si bien no somos una marca mundialmente conocida (todavia), tenemos grandes expectativas. Orgullosos de nuestros productos, los queremos mostrar al mundo, unite a nosotros para recibir grandes descuentos. Te vas a arrepentir de no hacerlo!</p>
+            </div>
+            <div class="container_introduccion_buttons">
+                <button>Mas informacion</button>
+                <button>Unite Ya!</button>
+            </div>
+
+        </section>
+
+
+
+
     </main>
 
 
