agregue maqueta de colecciones (solo html)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         </section>
 
-        <section class="container_introduccion">
+        <section class="container_introduccion" id="VELOCIDAD">
             <div class="introduccion">
                 <h2>Somos lo que estabas buscando.</h2>
                 <p>Un grupo de gente que busca el calzado perfecto, que se adapta a nuestras necesidades. Tenemos variedades únicas, una combinación de colores sin igual. Súmate a el movimiento, tu movimiento, <span>TILLAS</span>  tu velocidad en estado puro.</p>
@@ -67,6 +67,34 @@
             <div class="container_introduccion_buttons">
                 <button>Mas informacion</button>
                 <button>Unite Ya!</button>
+            </div>
+        </section>
+
+        <section class="container_colecciones" id="COLECCIONES">
+            <p>Nuestras Colecciones...</p>
+
+            <div class="container_coleccion1">
+                <p>Gotta go fast!</p>
+                <ul>
+                    <li><img src="" alt="foto1"></li>
+                    <li><img src="" alt="foto2"></li>
+                </ul>
+            </div>
+
+            <div class="container_coleccion2">
+                <p>Trekking profesional</p>
+                <ul>
+                    <li><img src="" alt="foto3"></li>
+                    <li><img src="" alt="foto4"></li>
+                </ul>
+            </div>
+
+            <div class="container_coleccion3">
+                <p>In da wata</p>
+                <ul>
+                    <li><img src="" alt="foto5"></li>
+                    <li><img src="" alt="foto6"></li>
+                </ul>
             </div>
 
         </section>
