add responsive tablet sobre nosotrs, nuestras coleccioens movile

--- a/index.html
+++ b/index.html
@@ -71,26 +71,26 @@
         </section>
 
         <section class="container_colecciones" id="COLECCIONES">
-            <p>Nuestras Colecciones...</p>
+            <p class="colecciones">Nuestras Colecciones...</p>
 
-            <div class="container_coleccion1">
-                <p>Gotta go fast!</p>
+            <div class="container_coleccion1 container_coleccion_default">
+                <p class="titulo_coleccion">Gotta go fast!</p>
                 <ul>
                     <li><img src="" alt="foto1"></li>
                     <li><img src="" alt="foto2"></li>
                 </ul>
             </div>
 
-            <div class="container_coleccion2">
-                <p>Trekking profesional</p>
+            <div class="container_coleccion2 container_coleccion_default">
+                <p class="titulo_coleccion">Trekking profesional</p>
                 <ul>
                     <li><img src="" alt="foto3"></li>
                     <li><img src="" alt="foto4"></li>
                 </ul>
             </div>
 
-            <div class="container_coleccion3">
-                <p>In da wata</p>
+            <div class="container_coleccion3 container_coleccion_default">
+                <p class="titulo_coleccion">In da wata</p>
                 <ul>
                     <li><img src="" alt="foto5"></li>
                     <li><img src="" alt="foto6"></li>
