footer y responsive algunas partes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="colecciones">Nuestras Colecciones...</p>
 
             <div class="container_coleccion1 container_coleccion_default">
-                <p class="titulo_coleccion">Gotta go fast!</p>
+                <p class="titulo_coleccion">Velocidad</p>
                 <ul>
                     <li><img src="" alt="foto1"></li>
                     <li><img src="" alt="foto2"></li>
@@ -82,7 +82,7 @@
             </div>
 
             <div class="container_coleccion2 container_coleccion_default">
-                <p class="titulo_coleccion">Trekking profesional</p>
+                <p class="titulo_coleccion">Trekking</p>
                 <ul>
                     <li><img src="" alt="foto3"></li>
                     <li><img src="" alt="foto4"></li>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="container_coleccion3 container_coleccion_default">
-                <p class="titulo_coleccion">In da wata</p>
+                <p class="titulo_coleccion">Para el agua</p>
                 <ul>
                     <li><img src="" alt="foto5"></li>
                     <li><img src="" alt="foto6"></li>
@@ -98,6 +98,30 @@
             </div>
 
         </section>
+
+        <section class="container_contactanos">
+
+            <p>Contactanos!</p>
+
+            <div class="container_form">
+                <form action="submit">
+                    <div><input class="input" type="email" placeholder="Email"></div>
+                    <div><input class="input" type="password" placeholder="Contraseña"></div>
+                    <div><input class="input" type="text" placeholder="Asunto"></div>
+                    <div><input class="input-grande" type="text"></div>
+                    <div><button class="boton-submit" type="submit">ENVIAR</button></div>
+                </form>
+            </div>
+
+        </section>
+
+        <footer>
+            <p><b>FRANCISCO CERSOSIMO</b></p>
+            <div>
+                <a href="https://www.instagram.com/francersosimo/" class="iconos"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/francisco-cersosimo-5799731b8/" class="iconos"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+        </footer>
 
 
 
