agregue fotos para seccion colecciones

--- a/index.html
+++ b/index.html
@@ -76,30 +76,38 @@
             <div class="container_coleccion1 container_coleccion_default">
                 <p class="titulo_coleccion">Velocidad</p>
                 <ul>
-                    <li><img src="" alt="foto1"></li>
-                    <li><img src="" alt="foto2"></li>
+                    <li><img src="./run1.webp" alt="foto1"></li>
+                    <li><img src="./run2.webp" alt="foto2"></li>
                 </ul>
             </div>
 
             <div class="container_coleccion2 container_coleccion_default">
-                <p class="titulo_coleccion">Trekking</p>
+                <p class="titulo_coleccion">Comfy</p>
                 <ul>
-                    <li><img src="" alt="foto3"></li>
-                    <li><img src="" alt="foto4"></li>
+                    <li><img src="./comfy1.jpg" alt="foto3"></li>
+                    <li><img src="./comfy2.jfif" alt="foto4"></li>
                 </ul>
             </div>
 
             <div class="container_coleccion3 container_coleccion_default">
                 <p class="titulo_coleccion">Para el agua</p>
                 <ul>
-                    <li><img src="" alt="foto5"></li>
-                    <li><img src="" alt="foto6"></li>
+                    <li><img src="./water1.jpg" alt="foto5"></li>
+                    <li><img src="./water2.jpg" alt="foto6"></li>
+                </ul>
+            </div>
+
+            <div class="container_coleccion4 container_coleccion_default">
+                <p class="titulo_coleccion">Para tirar facha...</p>
+                <ul>
+                    <li><img src="./facha1.jpg" alt="foto5"></li>
+                    <li><img src="./facha2.jpg" alt="foto6"></li>
                 </ul>
             </div>
 
         </section>
 
-        <section class="container_contactanos">
+        <section id="CONTACTANOS" class="container_contactanos">
 
             <p>Contactanos!</p>
 
