--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <p>Si bien no somos una marca mundialmente conocida (todavia), tenemos grandes expectativas. Orgullosos de nuestros productos, los queremos mostrar al mundo, unite a nosotros para recibir grandes descuentos. Te vas a arrepentir de no hacerlo!</p>
             </div>
             <div class="container_introduccion_buttons">
-                <button>Mas informacion</button>
-                <button>Unite Ya!</button>
+                <a href=""><button>Mas informacion</button></a>
+                <a href="./register.html"><button>Unite Ya!</button></a>
             </div>
         </section>
 
