--- a/login.html
+++ b/login.html
@@ -18,12 +18,15 @@
             <li><input type="password" class="password" placeholder="Contraseña"></li>
         </ul>
         <div class="container_botones">
-            <input type="checkbox" class="recordarme">Recordarme
-            <a href="">¿Ya estas registrado?</a>
+            <input type="checkbox" id="recordarme" class="recordarme">
+            <label for="recordarme">Recordarme</label>
+            <a href="./register.html">¿No estas registrado?</a>
         </div>
-        <div class="container_boton_iniciarsesion">
-            <a href="./index.html">INICIAR SESION</a>
-        </div>
+
+        <a href="./index.html">
+            <button class="container_boton_iniciarsesion">INICIAR SESION</button>
+        </a>
+
     </div>
 </body>
 </html>
