--- a/register.html
+++ b/register.html
@@ -59,13 +59,14 @@
                     Privacidad</b> y los <b>Terminos y condiciones de uso</b> de Tillas.</p>
         </div>
 
-        <div class="container_boton">
-            <a href="./index.html">REGISTRAR</a>
-        </div>
+        <a href="./index.html">
+            <button class="container_boton">Registrar</button>
+        </a>
+
 
         <div class="containter_yasosmiembro">
             <p>¿Ya sos miembro?</p>
-            <a href="./index.html">Inciar sesion</a>
+            <a href="./login.html">Inciar sesion</a>
         </div>
 
     </div>
