modifcar menu Hamb para que funcione con js

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             </div>
 
             <input type="checkbox" id="options-button" class="menu-toggle">
-            <ul class="container_options ">
+            <ul class="container_options" id="container__options">
                 <li><a href="#INICIO" class="options hover-underline-animation"> Inicio</a></li>
                 <li><a href="#VELOCIDAD" class="options hover-underline-animation">Sobre Nosotros</a> </li>
                 <li><a href="#COLECCIONES" class="options hover-underline-animation"> Colecciones</a></li>
                 <li><a href="#CONTACTANOS" class="options hover-underline-animation">Contactanos</a></li>
             </ul>
             <label for="options-button">
-                <div class="container_options_button">
+                <div class="container_options_button" id="container__options__button">
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </label>
@@ -134,4 +134,5 @@
 
 
 </body>
+<script src="./main.js"></script>
 </html>
